--- a/lidar_brake/CMakeLists.txt
+++ b/lidar_brake/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(stdr_control)
+project(lidar_brake)
 
 find_package(catkin_simple REQUIRED)
 
 #uncomment next line to use OpenCV library
 #find_package(OpenCV REQUIRED)
 
-#uncomment the next line to use the point-cloud library
+#uncomment the next 2 lines to use the point-cloud library
 #find_package(PCL 1.7 REQUIRED)
+#include_directories(${PCL_INCLUDE_DIRS})
+
 
 #uncomment the following 4 lines to use the Eigen library
 #find_package(cmake_modules REQUIRED)
@@ -29,13 +31,16 @@ catkin_simple()
 
 # Executables: uncomment the following and edit arguments to compile new nodes
 # may add more of these lines for more nodes from the same package
-cs_add_executable(stdr_open_loop_commander src/stdr_open_loop_commander.cpp)
-cs_add_executable(reactive_commander src/reactive_commander.cpp)
-cs_add_executable(my_wall_follower src/my_wall_follower.cpp)
+# cs_add_executable(example src/example.cpp)
+
+
+cs_add_executable(lidar_alarm_brake src/lidar_alarm_brake.cpp)
+
+
 #the following is required, if desire to link a node in this package with a library created in this same package
 # edit the arguments to reference the named node and named library within this package
 # target_link_libraries(example my_lib)
 
 cs_install()
 cs_export()
-    
+
