--- a/my_stdr_control/CMakeLists.txt
+++ b/my_stdr_control/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(stdr_control)
+project(my_stdr_control)
 
 find_package(catkin_simple REQUIRED)
 
@@ -29,9 +29,8 @@ catkin_simple()
 
 # Executables: uncomment the following and edit arguments to compile new nodes
 # may add more of these lines for more nodes from the same package
-cs_add_executable(stdr_open_loop_commander src/stdr_open_loop_commander.cpp)
-cs_add_executable(reactive_commander src/reactive_commander.cpp)
-cs_add_executable(my_wall_follower src/my_wall_follower.cpp)
+cs_add_executable(stdr_upper_corner_commander src/stdr_upper_corner_commander.cpp)
+# cs_add_executable(reactive_commander src/reactive_commander.cpp)
 #the following is required, if desire to link a node in this package with a library created in this same package
 # edit the arguments to reference the named node and named library within this package
 # target_link_libraries(example my_lib)
